# termblog

./: .editorconfig  .gitignore  .goreleaser.yaml  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  config.yaml  config.yaml.example  docker-compose.yml  example.config.yaml  go.mod  go.sum
.claude/: settings.json
.github/workflows/: release.yml
cmd/termblog/: main.go
content/posts/: 2026-02-01-welcome-to-termblog.md  2026-02-02-markdown-showcase.md  2026-02-03-why-terminal-first-blogging.md  2026-02-04-first-15-minutes-with-termblog.md  2026-02-05-ssh-workflows-for-readers-and-writers.md  2026-02-06-theming-your-terminal-publication.md  2026-02-07-termblog-com-launch-checklist.md
deploy/: termblog.service
docs/: CONFIGURATION.md  DEPLOYMENT.md  RELEASING.md  THEMES.md  TUI_BLOG_PROPOSAL.md
internal/app/: app.go  favicon_test.go
internal/blog/: content.go  feed.go  post.go  render.go  sitemap.go
internal/server/: api.go  api_test.go  commands.go  commands_test.go  favicon.go  favicon_test.go  gzip.go  gzip_test.go  http.go  index_template_test.go  ratelimit.go  ratelimit_test.go  security_test.go  ssh.go
internal/storage/: posts.go  preferences.go  sqlite.go  views.go  watcher.go
internal/theme/: styles.go  theme.go
internal/tui/: admin.go  app.go  debug_test.go  editor.go  list.go  reader.go  reader_toc_test.go  render_test.go  search.go  (+2 more)
themes/: pipboy.yaml
web/: Cargo.toml  Trunk.toml  index.html
web/src/: api.rs  app.rs  main.rs  theme.rs  types.rs  url.rs
web/src/views/: help.rs  list.rs  mod.rs  reader.rs  search.rs  theme_selector.rs
(+25 files in other folders)
