[package]
name = "termblog-web"
version = "0.6.1"
edition = "2021"

[dependencies]
ratzilla = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
    "Document",
    "HtmlElement",
    "Storage",
    "CssStyleDeclaration",
    "History",
    "Location",
    "Navigator",
    "Clipboard",
]
